--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="header-div-nav">
           <a class="header-nav-element" href=""
-            >All Courses <img src="/img/StrelkaVniz.svg" alt="" />
+            >All Courses <img src="./img/StrelkaVniz.svg" alt="" />
           </a>
         </div>
         <div class="header-div-nav">
@@ -73,7 +73,7 @@
           <div class="play-button">
             <img
               class="play-button-element"
-              src="/img/ButtonPlayVideo.svg"
+              src="./img/ButtonPlayVideo.svg"
               alt=""
               srcset=""
             />
@@ -85,7 +85,7 @@
         <!-- Изображение девушки с блокнотом -->
         <img
           class="content-img-girl-element"
-          src="/img/WoomanBigg.png"
+          src="./img/WoomanBigg.png"
           alt="The girl with the red notebook"
         />
       </div>
